[package]
name = "tweety-rs"
version = "0.1.5"
edition = "2021"
authors = ["John Philip <philo7029@gmail.com>"]
description = "A Rust crate for interacting with the Twitter API."
license = "MIT"
repository = "https://github.com/dxphilo/tweety-rs"
documentation = "https://docs.rs/tweety-rs"
homepage = "https://github.com/dxphilo/tweety-rs"
readme = "README.md"
keywords = ["twitter", "api", "rust", "tweety-rs"]
categories = ["api-bindings"]

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["stream", "multipart", "json"] }
reqwest-oauth1 = "0.2.4"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
yaup = "0.3.1"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["macros"] }
url = "2.5.2"
